Abhishek -Login  ,Operations, Customerreallocation

--- a/CMA/CMA.csproj
+++ b/CMA/CMA.csproj
@@ -159,6 +159,8 @@
       <DependentUpon>CustomerListDataSync.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModel\DataSync\VMCustomerListDataSync.cs" />
+    <Compile Include="Model\Login\LoginModel.cs" />
+    <Compile Include="Interface\ISessionManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.5.1.6471\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.5.1.6471\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
@@ -304,5 +306,6 @@
     <Folder Include="ViewModel\DataSync\" />
     <Folder Include="Model\DataSync\" />
     <Folder Include="View\DataSync\" />
+    <Folder Include="Model\Login\" />
   </ItemGroup>
 </Project>
