--- a/Droid/CMA.Droid.csproj
+++ b/Droid/CMA.Droid.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Database\SQLite_Android.cs" />
+    <Compile Include="Dependency\SessionManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -126,6 +127,7 @@
     <Folder Include="Resources\layout\" />
     <Folder Include="Resources\New Folder\" />
     <Folder Include="Resources\values\" />
+    <Folder Include="Dependency\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\SQLitePCL.raw.0.8.6\build\MonoAndroid\SQLitePCL.raw.targets" Condition="Exists('..\packages\SQLitePCL.raw.0.8.6\build\MonoAndroid\SQLitePCL.raw.targets')" />
