--- a/CMA/CMA.csproj
+++ b/CMA/CMA.csproj
@@ -171,6 +171,14 @@
     </Compile>
     <Compile Include="Model\Security\GoldDetailModel.cs" />
     <Compile Include="ViewModel\Security\VMGoldDetals.cs" />
+    <Compile Include="View\Security\PropertyDetails.xaml.cs">
+      <DependentUpon>PropertyDetails.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Security\ShareDetails.xaml.cs">
+      <DependentUpon>ShareDetails.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Model\Security\SecurityShareDetailModel.cs" />
+    <Compile Include="ViewModel\Security\VMSecurityShareDetail.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.5.1.6471\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.5.1.6471\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
@@ -250,6 +258,12 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Security\GoldDetails.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Security\PropertyDetails.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Security\ShareDetails.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
