--- a/CMA/CMA.csproj
+++ b/CMA/CMA.csproj
@@ -179,6 +179,8 @@
     </Compile>
     <Compile Include="Model\Security\SecurityShareDetailModel.cs" />
     <Compile Include="ViewModel\Security\VMSecurityShareDetail.cs" />
+    <Compile Include="Model\Security\PropertyDetailsModel.cs" />
+    <Compile Include="ViewModel\Security\VMPropertyDetails.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.5.1.6471\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.5.1.6471\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
