--- a/CMA/CMA.csproj
+++ b/CMA/CMA.csproj
@@ -181,6 +181,12 @@
     <Compile Include="ViewModel\Security\VMSecurityShareDetail.cs" />
     <Compile Include="Model\Security\PropertyDetailsModel.cs" />
     <Compile Include="ViewModel\Security\VMPropertyDetails.cs" />
+    <Compile Include="View\Security\InsuranceCompany.xaml.cs">
+      <DependentUpon>InsuranceCompany.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModel\Security\VMInsuranceCompany.cs" />
+    <Compile Include="Model\Security\InsuranceCompanyMode.cs" />
+    <Compile Include="Model\Login\ChangePasswordModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.0.107\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.0.107\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
@@ -270,6 +276,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Security\ShareDetails.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Security\InsuranceCompany.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
